fix #656 filter checkbox alignment

--- a/src/components/checkbox-box/checkbox-box.module.scss
+++ b/src/components/checkbox-box/checkbox-box.module.scss
@@ -40,6 +40,7 @@
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
+	flex-shrink: 0;
 }
 
 .boxContainer {
